# MCX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  build-windows.bat  config.json  config.json.example  mcx  package.json  server.json
cmake/: mingw-w64-x86_64.cmake
docs/: architecture-v1.md  build-windows.md  build.md  cli.md  cpp-contributing.md  cpp-core.md  implementation-notes.md  lua-api-design.md  positioning.md  release-v0.1.0-windows.md  runtime-design.md  scenes-concept.md  tests.md
examples/modules/: sample_module.cpp
include/mcx/: action_applier.hpp  actions.hpp  async_worker.hpp  backup_manager.hpp  ban_manager.hpp  chat_filter.hpp  command_parser.hpp  command_registry.hpp  config_loader.hpp  config_validator.hpp  config_watcher.hpp  console.hpp  economy_manager.hpp  entity_manager.hpp  event_bus.hpp  events.hpp  export.hpp  file_logger.hpp  http_client.hpp  imodule.hpp  kit_manager.hpp  log.hpp  lua_runtime.hpp  metrics.hpp  minecraft_bridge.hpp  module_loader.hpp  network_bridge.hpp  packet_serializer.hpp  paper_bridge.hpp  permissions.hpp  player_registry.hpp  protocol.hpp  rcon.hpp  scene_manager.hpp  scheduler.hpp  script_runtime.hpp  script_runtime_hardcoded.hpp  server.hpp  setup_wizard.hpp  signal_handler.hpp  (+6 more)
launcher-rs/: Cargo.toml  README.md
launcher-rs/src/: github.rs  installer.rs  main.rs  state.rs  updater.rs
release/: mcx-linux-x64  mcx_tests
scripts/examples/: city_rp.lua  lobby.lua
src/: event_utils.cpp  fake_event_source.cpp  index.ts  main.cpp  server.cpp
src/core/: action_applier.cpp  action_utils.cpp  actions.ts  async_worker.cpp  backup_manager.cpp  ban_manager.cpp  chat_filter.cpp  command_parser.cpp  command_registry.cpp  config_loader.cpp  config_validator.cpp  config_watcher.cpp  console.cpp  economy_manager.cpp  entity_manager.cpp  event_bus.cpp  events.ts  file_logger.cpp  http_client.cpp  kit_manager.cpp  log.cpp  lua_runtime.cpp  module_loader.cpp  packet_serializer.cpp  permissions.cpp  player_registry.cpp  protocol.cpp  rcon.cpp  scene_manager.cpp  scheduler.cpp  script_runtime_dummy.cpp  script_runtime_hardcoded.cpp  server.cpp  setup_wizard.cpp  signal_handler.cpp  stats_manager.cpp  teleport_manager.cpp  thread_scheduler.cpp  update_checker.cpp  websocket_server.cpp  (+1 more)
src/integration/: fake_event_source.cpp  minecraft_bridge_dummy.cpp  network_bridge.cpp  paper_bridge.cpp
src/launcher/: CMakeLists.txt  mcx_launcher.cpp  mcx_launcher.hpp
src/launcher_imgui/: CMakeLists.txt  mcx_imgui_launcher.cpp  mcx_imgui_launcher.hpp
src/runtime/: luaRuntime.ts
tests/: test_core.cpp
